Refactor BuildTimeConfigurationReader to make it easy to initialize a config outside ExtensionLoader and bring the configuration used in the source code generation phase closer to the actual build phase